facet-json/tests/snapshots/err__deserialize_tuple_empty_nested_from_1tup_nested.snap
---
source: facet-json/tests/err.rs
expression: err
---
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m <unknown>:1:3 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m[[0m[38;5;249m[[0m[31m1[0m[31m0[0m[38;5;249m][0m[38;5;249m][0m
 [38;5;240m  │[0m   [31m─[0m[31m┬[0m  
 [38;5;240m  │[0m    [31m╰[0m[31m─[0m[31m─[0m Too many elements for array [34m()[39m: maximum [33m0[39m elements allowed
[38;5;246m───╯[0m
