facet-json/tests/snapshots/err__deserialize_tuple_wrong_size_one_too_many.snap
---
source: facet-json/tests/err.rs
expression: err
---
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m <unknown>:1:5 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m[[0m[38;5;249m1[0m[38;5;249m0[0m[38;5;249m,[0m[31m2[0m[31m0[0m[38;5;249m][0m
 [38;5;240m  │[0m     [31m─[0m[31m┬[0m  
 [38;5;240m  │[0m      [31m╰[0m[31m─[0m[31m─[0m Too many elements for array [34m(i32)[39m: maximum [33m1[39m elements allowed
[38;5;246m───╯[0m
