facet-json/tests/snapshots/err__long_input_before_error.snap
---
source: facet-json/tests/err.rs
expression: err
---
[1m[33mWARNING: Input was truncated for display. Byte indexes in the error below do not match original input.[39m[0m
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m <unknown>:1:82 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m…[0m[38;5;249m8[0m[38;5;249m4[0m[38;5;249m7[0m[38;5;249m9[0m[38;5;249m2[0m[38;5;249m8[0m[38;5;249m3[0m[38;5;249m7[0m[38;5;249m4[0m[38;5;249m9[0m[38;5;249m8[0m[38;5;249m,[0m[38;5;249m2[0m[38;5;249m3[0m[38;5;249m9[0m[38;5;249m5[0m[38;5;249m8[0m[38;5;249m7[0m[38;5;249m2[0m[38;5;249m9[0m[38;5;249m3[0m[38;5;249m8[0m[38;5;249m7[0m[38;5;249m6[0m[38;5;249m.[0m[38;5;249m1[0m[38;5;249m3[0m[38;5;249m9[0m[38;5;249m6[0m[38;5;249m8[0m[38;5;249m7[0m[38;5;249m1[0m[38;5;249m9[0m[38;5;249m2[0m[38;5;249m8[0m[38;5;249m4[0m[38;5;249m7[0m[38;5;249m9[0m[38;5;249m2[0m[38;5;249m8[0m[38;5;249m3[0m[38;5;249m7[0m[38;5;249m4[0m[38;5;249m9[0m[38;5;249m8[0m[38;5;249m,[0m[38;5;249m2[0m[38;5;249m3[0m[38;5;249m9[0m[38;5;249m5[0m[38;5;249m8[0m[38;5;249m7[0m[38;5;249m2[0m[38;5;249m9[0m[38;5;249m3[0m[38;5;249m8[0m[38;5;249m7[0m[38;5;249m6[0m[38;5;249m.[0m[38;5;249m1[0m[38;5;249m3[0m[38;5;249m9[0m[38;5;249m6[0m[38;5;249m8[0m[38;5;249m7[0m[38;5;249m1[0m[38;5;249m9[0m[38;5;249m2[0m[38;5;249m8[0m[38;5;249m4[0m[38;5;249m7[0m[38;5;249m9[0m[38;5;249m2[0m[38;5;249m8[0m[38;5;249m3[0m[38;5;249m7[0m[38;5;249m4[0m[38;5;249m9[0m[38;5;249m8[0m[38;5;249m,[0m[31m][0m[38;5;249m,[0m
 [38;5;240m  │[0m                                                                                  [31m┬[0m  
 [38;5;240m  │[0m                                                                                  [31m╰[0m[31m─[0m[31m─[0m Unexpected character: got '[31m][39m', wanted [33ma value[39m
[38;5;246m───╯[0m
