facet-json/tests/snapshots/err__unknown_field_with_rename.snap
---
source: facet-json/tests/err.rs
expression: err
---
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m <unknown>:1:2 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m{[0m[31m"[0m[31mw[0m[31mr[0m[31mo[0m[31mn[0m[31mg[0m[31m_[0m[31mn[0m[31ma[0m[31mm[0m[31me[0m[31m"[0m[38;5;249m:[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249mv[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249mu[0m[38;5;249me[0m[38;5;249m"[0m[38;5;249m}[0m
 [38;5;240m  │[0m  [31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m        [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m Unknown field: [31mwrong_name[39m for shape [33mRenamedFields[39m
[38;5;246m───╯[0m
